# tpchgen-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conformance.yml  install-python-package.yml  rust.yml  tpchgen-cli-publish-pypi.yml
benchmarks/: .gitignore  BENCHMARKS.md  duckdb_duckdb.sh  duckdb_duckdb.txt  parquet_duckdb.sh  parquet_duckdb.txt  parquet_tpchgen.sh  parquet_tpchgen.txt  tbl_dbgen.sh  tbl_dbgen.txt  tbl_dbgen_O3.sh  tbl_dbgen_O3.txt  tbl_tpchgen.sh  tbl_tpchgen.txt  tbl_tpchgen_1.sh  tbl_tpchgen_1.txt  tpch-dbgen_O3.patch
data/csv/: README.md
patches/: README.md  csv.patch  runner.patch  upstream.patch
src/: main.rs
tests/: conformance.sh
tpchgen/: Cargo.toml
tpchgen-arrow/: Cargo.toml  README.md
tpchgen-arrow/src/: conversions.rs  lib.rs  lineitem.rs
tpchgen-arrow/tests/: reparse.rs
tpchgen-cli/: Cargo.toml  README.md  pyproject.toml
tpchgen-cli/src/: csv.rs  generate.rs  main.rs  parquet.rs  sources.rs  tbl.rs
tpchgen/data/: README.md
tpchgen/data/csv/: README.md
tpchgen/src/: csv.rs  dates.rs  decimal.rs  distribution.rs  dists.dss  generators.rs  lib.rs  random.rs  rng.rs  text.rs  textgen.rs  tpch.rs  utils.rs
tpchgen/tests/: integration_tests.rs
