[package]
name = "tpchgen-arrow"
version = "1.1.1"
edition = "2024"
authors = ["clflushopt", "alamb"]
description = "TPC-H data generator into Apache Arrow format"
repository = "https://github.com/clflushopt/tpchgen-rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
arrow = { version = "55.2", default-features = false, features = ["prettyprint"] }
tpchgen = { path = "../tpchgen", version = "1.1.1" }

[dev-dependencies]
arrow-csv = "55.2"
chrono = "0.4.39"
