[package]
name = "tpchgen"
version = "0.1.0"
edition = "2021"
authors = ["clflushopt", "alamb"]
description = "Blazing fast pure Rust no dependency TPC-H data generator"
repository = "https://github.com/clflushopt/tpchgen-rs"

# Designed to have no depdencies to make it easy to embed in other projects
# See ../ARCHITECTURE.md for more details
[dependencies]

[dev-dependencies]
flate2 = "1.1.0"

